@@ -1,6 +1,7 @@
 2011-02-13
 * only pass data between cpio header and trailer to the cpio unpacker.
 * start inlining methods in certain checks that don't have to be separate
+* inline more methods, merge a few checks into one file
 
 2011-02-12
 * add proper options to license scanning program
